@@ -15,7 +15,7 @@
 #  http://www.r-project.org/Licenses/
 
 help.start <- function (gui = "irrelevant", browser = getOption("browser"),
-			remote = NULL)
+			remote = NULL, searchEngine = FALSE)
 {
     if(is.null(browser))
 	stop("invalid browser name, check options(\"browser\").")
@@ -27,7 +27,8 @@ help.start <- function (gui = "irrelevant", browser = getOption("browser"),
     make.packages.html()
     tmpdir <- paste("file://", URLencode(tempdir()), "/.R", sep = "")
     url <- paste(if (is.null(remote)) tmpdir else remote,
-		 "/doc/html/index.html", sep = "")
+                 if(searchEngine) "/doc/html/search/SearchEngine.html"
+                 else "/doc/html/index.html", sep = "")
     if (is.character(browser)) {
         writeLines(strwrap(gettextf("If '%s' is already running, it is *not* restarted, and you must switch to its window.",
                                     browser),
